--- a/css/main.css
+++ b/css/main.css
@@ -77,21 +77,11 @@ header {
 }
 
 header a {
-      color: #F05F40;
+      color: #3168ba;
       background: none;
 }
 header a:hover {
     background: none;
-}
-
-header .nav {
-    display: inline-block;
-    text-align: right;
-}
-
-header .button {
-    height: 100%;
-    border-radius: 0px;
 }
 
 .bars {
@@ -100,23 +90,28 @@ header .button {
 
 .bar {
     display: block;
-    max-width: 100%;
+    width: 100%;
     font-size: 1.5em;
     padding: 0.4em;
     text-align: center;
-    background-color: #F05F40;
+    vertical-align: centre;
+    background-color: #3168ba;
     color: #ffffff;
 }
 
 .bar .collum {
     text-align: center;
-    width: 40%;
+    max-width: auto;
+    min-width: 45%;
     margin: 0 auto;
     display: inline-block;
     vertical-align: top;
 }
 .collum p {
     text-align: left;
+}
+.collum img {
+   width: 8em
 }
 
 .background {
@@ -134,6 +129,20 @@ header .button {
     text-shadow: none;
 }
 
+.bio {
+   text-align: center;
+   width: auto;
+   padding: 1em;
+   margin: 0 auto;
+   display: inline-block;
+   vertical-align: block;
+}
+
+.bio img {
+   width: 8em;
+   border-radius: 100%;
+}
+
 .wrapper {
     width: 75%;
     margin: 0 auto;
@@ -144,11 +153,12 @@ header .button {
     display: inline-block;
     padding: 0.5em;
     background: none;
-    border-radius: 5px;
+    border-radius: 1em;
     color: #ffffff;
     text-decoration: none;
     transition-duration: 0.4s;
     transition-property: background-color, color;
+    margin: 0.5em
 }
 
 /* ==========================================================================
